src/main/java/xpr/adslParser.java
// Generated from adsl.g4 by ANTLR 4.5.1
package xpr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class adslParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, OR = 2, AT = 3, UNDER = 4, COMMA = 5, SEMICOLON = 6, CRLF = 7, COLON = 8, DOT = 9,
            ASSIGN = 10, PLUS_ASSIGN = 11, MINUS_ASSIGN = 12, ACTION = 13, CLASS = 14, CREAT = 15,
            DEL = 16, ONEOF = 17, SUBSET = 18, CC_UNIQUE = 19, ASSERT = 20, IF = 21, FOREACH = 22,
            EXTEND = 23, EMPTY = 24, EQUAL = 25, NEG = 26, ISINGROUP = 27, AND = 28, IN = 29, TRY = 30,
            ELSE = 31, ISEMPTY = 32, RAISE = 33, TRUE = 34, FALSE = 35, UNION = 36, OBRACKET = 37,
            CBRACKET = 38, LEFT_RBRACKET = 39, RIGHT_RBRACKET = 40, NUMBER = 41, STRING = 42,
            STRR = 43, ID_GLOBAL = 44, ID = 45, COMMENT = 46, WS = 47;
    public static final int
            RULE_prog = 0, RULE_class_definition = 1, RULE_class_declaration = 2,
            RULE_class_body = 3, RULE_class_name = 4, RULE_class_parent = 5, RULE_action_definition = 6,
            RULE_action_declaration = 7, RULE_action_name = 8, RULE_action_body = 9,
            RULE_expression = 10, RULE_bool_t = 11, RULE_dynamic_assignment = 12,
            RULE_foreach_statement = 13, RULE_if_statement = 14, RULE_else_token = 15,
            RULE_else_statement = 16, RULE_cond_expression = 17, RULE_inusergroup = 18,
            RULE_block_st = 19, RULE_comparison_list = 20, RULE_com = 21, RULE_in_func = 22,
            RULE_equal_func = 23, RULE_isempty_st = 24, RULE_assert_statement = 25,
            RULE_assert_body = 26, RULE_assert_expr = 27, RULE_set_expr = 28, RULE_exppp = 29,
            RULE_cc_statement = 30, RULE_cc_unique = 31, RULE_assignment = 32, RULE_multi_expr = 33,
            RULE_primary_expr = 34, RULE_union_st = 35, RULE_element = 36, RULE_create_statement = 37,
            RULE_create_expr = 38, RULE_delete_statement = 39, RULE_find_statement = 40,
            RULE_crlf = 41, RULE_terminator = 42, RULE_id = 43;
    public static final String[] ruleNames = {
            "prog", "class_definition", "class_declaration", "class_body", "class_name",
            "class_parent", "action_definition", "action_declaration", "action_name",
            "action_body", "expression", "bool_t", "dynamic_assignment", "foreach_statement",
            "if_statement", "else_token", "else_statement", "cond_expression", "inusergroup",
            "block_st", "comparison_list", "com", "in_func", "equal_func", "isempty_st",
            "assert_statement", "assert_body", "assert_expr", "set_expr", "exppp",
            "cc_statement", "cc_unique", "assignment", "multi_expr", "primary_expr",
            "union_st", "element", "create_statement", "create_expr", "delete_statement",
            "find_statement", "crlf", "terminator", "id"
    };

    private static final String[] _LITERAL_NAMES = {
            null, "'*'", "'or'", "'at'", "'__'", "','", "';'", null, "':'", "'.'",
            "'='", "'+='", "'-='", "'action'", "'class'", "'create'", "'delete'",
            "'oneof'", "'subset'", "'cc_unique'", "'assert'", "'if'", "'foreach'",
            "'extends'", "'empty'", "'equal'", "'not'", "'inusergroup'", "'and'",
            "'in'", "'tryoneof'", "'else'", "'isempty'", "'raise'", "'true'", "'false'",
            "'union'", "'{'", "'}'", "'('", "')'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, "OR", "AT", "UNDER", "COMMA", "SEMICOLON", "CRLF", "COLON",
            "DOT", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "ACTION", "CLASS", "CREAT",
            "DEL", "ONEOF", "SUBSET", "CC_UNIQUE", "ASSERT", "IF", "FOREACH", "EXTEND",
            "EMPTY", "EQUAL", "NEG", "ISINGROUP", "AND", "IN", "TRY", "ELSE", "ISEMPTY",
            "RAISE", "TRUE", "FALSE", "UNION", "OBRACKET", "CBRACKET", "LEFT_RBRACKET",
            "RIGHT_RBRACKET", "NUMBER", "STRING", "STRR", "ID_GLOBAL", "ID", "COMMENT",
            "WS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "adsl.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public adslParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgContext extends ParserRuleContext {
        public List<Class_definitionContext> class_definition() {
            return getRuleContexts(Class_definitionContext.class);
        }

        public Class_definitionContext class_definition(int i) {
            return getRuleContext(Class_definitionContext.class, i);
        }

        public List<TerminatorContext> terminator() {
            return getRuleContexts(TerminatorContext.class);
        }

        public TerminatorContext terminator(int i) {
            return getRuleContext(TerminatorContext.class, i);
        }

        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).enterProg(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).exitProg(this);
        }
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(97);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == CLASS) {
                    {
                        {
                            setState(88);
                            class_definition();
                            setState(92);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                            while (_la == SEMICOLON || _la == CRLF) {
                                {
                                    {
                                        setState(89);
                                        terminator(0);
                                    }
                                }
                                setState(94);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                            }
                        }
                    }
                    setState(99);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Class_definitionContext extends ParserRuleContext {
        public Class_declarationContext class_declaration() {
            return getRuleContext(Class_declarationContext.class, 0);
        }

        public TerminalNode OBRACKET() {
            return getToken(adslParser.OBRACKET, 0);
        }

        public Class_bodyContext class_body() {
            return getRuleContext(Class_bodyContext.class, 0);
        }

        public TerminalNode CBRACKET() {
            return getToken(adslParser.CBRACKET, 0);
        }

        public List<CrlfContext> crlf() {
            return getRuleContexts(CrlfContext.class);
        }

        public CrlfContext crlf(int i) {
            return getRuleContext(CrlfContext.class, i);
        }

        public Class_definitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_class_definition;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).enterClass_definition(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).exitClass_definition(this);
        }
    }

    public final Class_definitionContext class_definition() throws RecognitionException {
        Class_definitionContext _localctx = new Class_definitionContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_class_definition);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(100);
                class_declaration();
                setState(101);
                match(OBRACKET);
                setState(105);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(102);
                                crlf();
                            }
                        }
                    }
                    setState(107);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                }
                setState(108);
                class_body();
                setState(112);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == CRLF) {
                    {
                        {
                            setState(109);
                            crlf();
                        }
                    }
                    setState(114);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(115);
                match(CBRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Class_declarationContext extends ParserRuleContext {
        public TerminalNode CLASS() {
            return getToken(adslParser.CLASS, 0);
        }

        public Class_nameContext class_name() {
            return getRuleContext(Class_nameContext.class, 0);
        }

        public TerminalNode EXTEND() {
            return getToken(adslParser.EXTEND, 0);
        }

        public Class_parentContext class_parent() {
            return getRuleContext(Class_parentContext.class, 0);
        }

        public Class_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_class_declaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).enterClass_declaration(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).exitClass_declaration(this);
        }
    }

    public final Class_declarationContext class_declaration() throws RecognitionException {
        Class_declarationContext _localctx = new Class_declarationContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_class_declaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(117);
                match(CLASS);
                setState(118);
                class_name();
                setState(121);
                _la = _input.LA(1);
                if (_la == EXTEND) {
                    {
                        setState(119);
                        match(EXTEND);
                        setState(120);
                        class_parent();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Class_bodyContext extends ParserRuleContext {
        public List<Action_definitionContext> action_definition() {
            return getRuleContexts(Action_definitionContext.class);
        }

        public Action_definitionContext action_definition(int i) {
            return getRuleContext(Action_definitionContext.class, i);
        }

        public List<TerminatorContext> terminator() {
            return getRuleContexts(TerminatorContext.class);
        }

        public TerminatorContext terminator(int i) {
            return getRuleContext(TerminatorContext.class, i);
        }

        public Class_bodyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_class_body;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).enterClass_body(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).exitClass_body(this);
        }
    }

    public final Class_bodyContext class_body() throws RecognitionException {
        Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_class_body);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(132);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == ACTION) {
                    {
                        {
                            setState(123);
                            action_definition();
                            setState(127);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                            while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                                if (_alt == 1) {
                                    {
                                        {
                                            setState(124);
                                            terminator(0);
                                        }
                                    }
                                }
                                setState(129);
                                _errHandler.sync(this);
                                _alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
                            }
                        }
                    }
                    setState(134);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Class_nameContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(adslParser.ID, 0);
        }

        public Class_nameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_class_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).enterClass_name(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).exitClass_name(this);
        }
    }

    public final Class_nameContext class_name() throws RecognitionException {
        Class_nameContext _localctx = new Class_nameContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_class_name);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(135);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Class_parentContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(adslParser.ID, 0);
        }

        public Class_parentContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_class_parent;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).enterClass_parent(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).exitClass_parent(this);
        }
    }

    public final Class_parentContext class_parent() throws RecognitionException {
        Class_parentContext _localctx = new Class_parentContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_class_parent);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(137);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Action_definitionContext extends ParserRuleContext {
        public Action_declarationContext action_declaration() {
            return getRuleContext(Action_declarationContext.class, 0);
        }

        public TerminalNode OBRACKET() {
            return getToken(adslParser.OBRACKET, 0);
        }

        public Action_bodyContext action_body() {
            return getRuleContext(Action_bodyContext.class, 0);
        }

        public TerminalNode CBRACKET() {
            return getToken(adslParser.CBRACKET, 0);
        }

        public List<CrlfContext> crlf() {
            return getRuleContexts(CrlfContext.class);
        }

        public CrlfContext crlf(int i) {
            return getRuleContext(CrlfContext.class, i);
        }

        public Action_definitionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_action_definition;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).enterAction_definition(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).exitAction_definition(this);
        }
    }

    public final Action_definitionContext action_definition() throws RecognitionException {
        Action_definitionContext _localctx = new Action_definitionContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_action_definition);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(139);
                action_declaration();
                setState(140);
                match(OBRACKET);
                setState(144);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(141);
                                crlf();
                            }
                        }
                    }
                    setState(146);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                }
                setState(147);
                action_body();
                setState(151);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == CRLF) {
                    {
                        {
                            setState(148);
                            crlf();
                        }
                    }
                    setState(153);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(154);
                match(CBRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Action_declarationContext extends ParserRuleContext {
        public TerminalNode ACTION() {
            return getToken(adslParser.ACTION, 0);
        }

        public Action_nameContext action_name() {
            return getRuleContext(Action_nameContext.class, 0);
        }

        public Action_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_action_declaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).enterAction_declaration(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).exitAction_declaration(this);
        }
    }

    public final Action_declarationContext action_declaration() throws RecognitionException {
        Action_declarationContext _localctx = new Action_declarationContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_action_declaration);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(156);
                match(ACTION);
                setState(157);
                action_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Action_nameContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(adslParser.ID, 0);
        }

        public Action_nameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_action_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).enterAction_name(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).exitAction_name(this);
        }
    }

    public final Action_nameContext action_name() throws RecognitionException {
        Action_nameContext _localctx = new Action_nameContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_action_name);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(159);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Action_bodyContext extends ParserRuleContext {
        public List<ExpressionContext> expression() {
            return getRuleContexts(ExpressionContext.class);
        }

        public ExpressionContext expression(int i) {
            return getRuleContext(ExpressionContext.class, i);
        }

        public List<CrlfContext> crlf() {
            return getRuleContexts(CrlfContext.class);
        }

        public CrlfContext crlf(int i) {
            return getRuleContext(CrlfContext.class, i);
        }

        public Action_bodyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_action_body;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).enterAction_body(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).exitAction_body(this);
        }
    }

    public final Action_bodyContext action_body() throws RecognitionException {
        Action_bodyContext _localctx = new Action_bodyContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_action_body);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(166);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CREAT) | (1L << DEL) | (1L << ONEOF) | (1L << SUBSET) | (1L << CC_UNIQUE) | (1L << ASSERT) | (1L << IF) | (1L << FOREACH) | (1L << EMPTY) | (1L << EQUAL) | (1L << NEG) | (1L << ISINGROUP) | (1L << TRY) | (1L << ISEMPTY) | (1L << RAISE) | (1L << TRUE) | (1L << FALSE) | (1L << NUMBER) | (1L << STRING) | (1L << STRR) | (1L << ID))) != 0)) {
                    {
                        {
                            setState(161);
                            expression();
                            setState(162);
                            crlf();
                        }
                    }
                    setState(168);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExpressionContext extends ParserRuleContext {
        public AssignmentContext assignment() {
            return getRuleContext(AssignmentContext.class, 0);
        }

        public Delete_statementContext delete_statement() {
            return getRuleContext(Delete_statementContext.class, 0);
        }

        public Cc_statementContext cc_statement() {
            return getRuleContext(Cc_statementContext.class, 0);
        }

        public Assert_statementContext assert_statement() {
            return getRuleContext(Assert_statementContext.class, 0);
        }

        public If_statementContext if_statement() {
            return getRuleContext(If_statementContext.class, 0);
        }

        public IdContext id() {
            return getRuleContext(IdContext.class, 0);
        }

        public Foreach_statementContext foreach_statement() {
            return getRuleContext(Foreach_statementContext.class, 0);
        }

        public TerminalNode EMPTY() {
            return getToken(adslParser.EMPTY, 0);
        }

        public Find_statementContext find_statement() {
            return getRuleContext(Find_statementContext.class, 0);
        }

        public Dynamic_assignmentContext dynamic_assignment() {
            return getRuleContext(Dynamic_assignmentContext.class, 0);
        }

        public Create_statementContext create_statement() {
            return getRuleContext(Create_statementContext.class, 0);
        }

        public TerminalNode RAISE() {
            return getToken(adslParser.RAISE, 0);
        }

        public Bool_tContext bool_t() {
            return getRuleContext(Bool_tContext.class, 0);
        }

        public ComContext com() {
            return getRuleContext(ComContext.class, 0);
        }

        public ExpressionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expression;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).enterExpression(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof adslListener) ((adslListener) listener).exitExpression(this);
        }
    }
